--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/@mux/videojs-kit/dist/index.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/@mux/videojs-kit/dist/index.js"
+            ]
           },
           "configurations": {
             "production": {
